--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".presentation.MainActivity">
 
+    <Spinner
+        android:id="@+id/currencySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guideline4"/>
+
     <TextView
         android:id="@+id/textViewSortBy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Сoртировать: "
+        android:text="@string/sort_by"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -26,11 +36,12 @@
         android:id="@+id/textViewSort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="По умолчанию"
+        android:text="@string/default_sort"
+        android:textStyle="bold"
+        android:textColor="@color/mainGreen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewSortBy"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/mainGreen"/>
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSortBy" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -53,14 +64,16 @@
         tools:listitem="@layout/rate_item" />
 
     <ProgressBar
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/loading_progress_bar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/mainGreen"
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
