--- a/app/src/main/res/layout/rate_item.xml
+++ b/app/src/main/res/layout/rate_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/currency_item_width"
         android:layout_marginVertical="@dimen/rate_item_margin"
@@ -13,7 +13,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/material_on_surface_emphasis_medium">
+        app:cardCornerRadius="@dimen/card_view_corner"
+        android:elevation="@dimen/card_view_elevation"
+        app:strokeWidth="@dimen/card_view_stroke"
+        app:strokeColor="@color/mainGreen"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -25,8 +29,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="USD"
-                android:textColor="@color/white"
+                android:textColor="@color/mainGreen"
                 android:textSize="@dimen/currency_label_text_size"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +50,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="123.4"
-                android:textColor="@color/white"
-                android:textSize="@dimen/currency_label_text_size"
+                android:textColor="@color/black"
+                android:textSize="@dimen/currency_value_text_size"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -73,6 +79,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
