--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="values_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
-        <item>Uranus</item>
+        <item>AED</item>
+        <item>AFN</item>
+        <item>ALL</item>
+        <item>AMD</item>
+        <item>ANG</item>
+        <item>AOA</item>
+        <item>ARS</item>
+        <item>AUD</item>
+        <item>AWG</item>
+        <item>AZN</item>
+        <item>BAM</item>
+        <item>BBD</item>
+        <item>BDT</item>
+        <item>BGN</item>
+        <item>BHD</item>
+        <item>BIF</item>
+        <item>BMD</item>
+        <item>BND</item>
+        <item>BOB</item>
+        <item>BRL</item>
+        <item>BSD</item>
+        <item>BTC</item>
+        <item>BTN</item>
+        <item>BWP</item>
+        <item>BYN</item>
+        <item>BYR</item>
+        <item>BZD</item>
+        <item>CAD</item>
+        <item>CDF</item>
+        <item>CHF</item>
+        <item>CLF</item>
+        <item>CLP</item>
+        <item>CNY</item>
+        <item>COP</item>
+        <item>CRC</item>
+        <item>CUC</item>
+        <item>CUP</item>
+        <item>CVE</item>
+        <item>CZK</item>
         <item>Uranus</item>
         <item>Uranus</item>
         <item>Uranus</item>
