--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <!-- margin size -->
     <dimen name="rate_item_margin">4dp</dimen>
     <dimen name="margin_small">4dp</dimen>
+    <dimen name="margin_large">8dp</dimen>
 
     <!-- corner -->
     <dimen name="card_view_corner">8dp</dimen>
